# ChangeLog for games-puzzle/xblockout
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xblockout/ChangeLog,v 1.13 2006/12/06 17:20:50 wolf31o2 Exp $

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  xblockout-1.1.3.ebuild:
  Remove old virtual/x11 dependency.

*xblockout-1.1.4 (02 Oct 2006)

  02 Oct 2006; Tristan Heaven <nyhm@gentoo.org> +xblockout-1.1.4.ebuild:
  Version bump

  14 Feb 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  xblockout-1.1.3.ebuild:
  Fix dependencies for modular X (bug #122625).

*xblockout-1.1.3 (08 Nov 2005)

  08 Nov 2005; Michael Sterrett <mr_bones_@gentoo.org>
  xblockout-1.1.2.ebuild, +xblockout-1.1.3.ebuild:
  version bump

  20 Feb 2005; Tom Martin <slarti@gentoo.org> xblockout-1.1.2.ebuild:
  Marked ~amd64 to resolve bug 70052. Now filtering -fweb.

  29 Dec 2004; Joseph Jezak <josejx@gentoo.org> xblockout-1.1.2.ebuild:
  Marked ppc stable.

  05 Nov 2004; Joseph Jezak <josejx@gentoo.org> xblockout-1.1.2.ebuild:
  Added ~ppc.

  02 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> xblockout-1.1.2.ebuild:
  Patch from sekretarz via bug #55223 to fix linking under xorg

  23 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> xblockout-1.1.2.ebuild:
  IUSE; don't rdepend on sed; tidy

*xblockout-1.1.2 (06 Oct 2003)

  06 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Security version bump.

*xblockout-1.1.1 (17 Aug 2003)

  17 Aug 2003; Michael Sterrett <msterret@gentoo.org> xblockout-1.1.1.ebuild:
  version bump

  28 Jun 2003; <msterret@gentoo.org> xblockout-1.0k.ebuild:
  use sed -i

*xblockout-1.0k (27 Jun 2003)

  27 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Henrik Johansson <henrik_johansson@home.se> #19429.