@@ -1,0 +1,3 @@
+MD5 f618cb6fc20314683c20679d063e1b37 xbl-1.1.5.tar.gz 136508
+RMD160 30cf9f6b1c251b267f0ebe0b85f349e9dce3dd44 xbl-1.1.5.tar.gz 136508
+SHA256 5628e4a70709e3d996f4adf635a1760d96fad3ded0dd32d32205bdccde1e2cad xbl-1.1.5.tar.gz 136508
