@@ -1,6 +1,12 @@
 # ChangeLog for games-puzzle/xblockout
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xblockout/ChangeLog,v 1.13 2006/12/06 17:20:50 wolf31o2 Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xblockout/ChangeLog,v 1.14 2007/01/29 22:24:00 mr_bones_ Exp $
+
+*xblockout-1.1.5 (29 Jan 2007)
+
+  29 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +xblockout-1.1.5.ebuild:
+  version bump
 
   06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   xblockout-1.1.3.ebuild:
